--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,9 @@
-### IntelliJ IDEA ###
-out/
+# Compiled files
+/target/
+/out/
 !**/src/main/**/out/
 !**/src/test/**/out/
-.kotlin
+
+# IntelliJ IDEA
 /.idea/
 *.iml
-
-### Eclipse ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
-bin/
-!**/src/main/**/bin/
-!**/src/test/**/bin/
-
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-
-### VS Code ###
-.vscode/
-
-### Mac OS ###
-.DS_Store
